<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="xyz.alynx.livewallpaper.MainActivity">
    <item
        android:id="@+id/action_toggle_slide"
        android:orderInCategory="100"
        android:title="@string/action_allow_slide"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove"
        android:orderInCategory="100"
        android:title="@string/action_remove"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tips"
        android:orderInCategory="100"
        android:title="@string/action_tips"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reward"
        android:orderInCategory="100"
        android:title="@string/action_reward"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
