<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:scrollbarStyle="outsideOverlay"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="@dimen/dialog_padding">

        <TextView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name_edit_text" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:ems="10"
            android:hint="@string/enter_wallpaper_name" android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/path" />

        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/path_edit_text" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:ems="10"
                android:focusable="false" android:hint="@string/choose_file" android:inputType="textUri"
                android:text="" tools:ignore="Autofill" />

            <Button
                android:id="@+id/choose_file_button" android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:text="@string/choose" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
