<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RewardActivity"
    tools:showIn="@layout/activity_reward">
    <TextView
        android:id="@+id/support_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/support_author"
        android:textAlignment="center"
        android:textSize="@dimen/support_author_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/content_margin"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/support_author">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/content_padding">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_margin"
                android:layout_marginEnd="@dimen/content_margin"
                android:text="@string/a_cup_of_coffee"
                android:textAlignment="viewStart"
                android:textSize="@dimen/reward_text_size" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_margin"
                android:layout_marginBottom="@dimen/content_margin"
                android:text="@string/alipay"
                android:textAlignment="center"
                android:textSize="@dimen/reward_title_size" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/reward_image_margin"
                android:layout_marginEnd="@dimen/reward_image_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/alipay"
                app:srcCompat="@drawable/alipay" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_margin"
                android:layout_marginBottom="@dimen/content_margin"
                android:text="@string/wechatpay"
                android:textAlignment="center"
                android:textSize="@dimen/reward_title_size" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/reward_image_margin"
                android:layout_marginEnd="@dimen/reward_image_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/wechatpay"
                app:srcCompat="@drawable/wechatpay" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_margin"
                android:layout_marginBottom="@dimen/content_margin"
                android:text="@string/paypal"
                android:textAlignment="center"
                android:textSize="@dimen/reward_title_size" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/paypal_link"
                android:textAlignment="center"
                android:textSize="@dimen/reward_title_size" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>