<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="xyz.alynx.livewallpaper.AboutActivity"
    tools:showIn="@layout/activity_about">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:focusable="true"
        android:longClickable="true"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:textSize="@dimen/app_name_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:focusable="true"
        android:longClickable="true"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:textSize="@dimen/app_version_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <TextView
        android:id="@+id/app_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:focusable="true"
        android:longClickable="true"
        android:text="@string/app_author"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:textSize="@dimen/app_author_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_version" />

    <TextView
        android:id="@+id/app_author_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:autoLink="web"
        android:focusable="true"
        android:longClickable="true"
        android:text="@string/app_author_link"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:textSize="@dimen/app_author_link_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_author" />

    <TextView
        android:id="@+id/app_detail"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/app_detail_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:autoLink="web"
        android:focusable="true"
        android:longClickable="true"
        android:maxHeight="@dimen/app_detail_height"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:text="@string/app_detail"
        android:textAlignment="viewStart"
        android:textIsSelectable="true"
        android:textSize="@dimen/app_detail_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_author_link" />

    <TextView
        android:id="@+id/app_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:autoLink="web"
        android:focusable="true"
        android:longClickable="true"
        android:text="@string/app_link"
        android:textAlignment="center"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_detail" />
</android.support.constraint.ConstraintLayout>