<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp">

    <android.support.v7.widget.CardView
        android:id="@+id/wallpaper_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="@dimen/thumbnail_width"
                android:layout_height="@dimen/thumbnail_height"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/wallpaper_thumbnail"
                android:focusable="true"
                android:scaleType="fitXY"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/name_height"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:paddingLeft="@dimen/name_padding"
                    android:paddingRight="@dimen/name_padding"
                    android:textColor="@color/name"
                    android:textSize="@dimen/name_size"
                    card_view:layout_constraintBottom_toTopOf="@+id/path"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toEndOf="@id/thumbnail"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/path"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/path_height"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:paddingLeft="@dimen/path_padding"
                    android:paddingRight="@dimen/path_padding"
                    android:textSize="@dimen/path_size"
                    card_view:layout_constraintBottom_toTopOf="@+id/remove_button"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toEndOf="@id/thumbnail"
                    card_view:layout_constraintTop_toBottomOf="@id/name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/internal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="@dimen/internal_padding"
                        android:paddingRight="@dimen/internal_padding"
                        android:text="@string/internal"
                        android:textColor="@color/internal"
                        android:textSize="@dimen/internal_size"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintStart_toEndOf="@id/thumbnail"
                        card_view:layout_constraintTop_toBottomOf="@+id/path" />

                    <Button
                        android:id="@+id/remove_button"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="@string/action_remove"
                        android:textSize="@dimen/remove_size"
                        card_view:layout_constraintBaseline_toBaselineOf="@+id/internal"
                        card_view:layout_constraintStart_toEndOf="@id/internal" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>